--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>Common</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.5.1" />
+    <PackageReference Include="MySqlConnector" Version="2.5.0" />
+  </ItemGroup>
 </Project>
